src/objects/Opty_Grant_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Map fields from Opportunity to Grant on Conversion</description>
    <fields>
        <fullName>Grant_Field__c</fullName>
        <label>Grant Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Order__c</fullName>
        <defaultValue>999</defaultValue>
        <label>Page Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_on_Page__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Section on Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity to Grant Field Map</label>
</CustomObject>